@@ -1,3 +1,7 @@
+n/a - July 1, 2004
+
+	* Moved hotplug start to runlevels 3-5 from sysinit
+
 n/a - June 30, 2004
 
 	* Pass -depth in cleanfs
